<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/nav_header"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerCrop"
            android:src="@drawable/nav_header"
            app:srcCompat="@drawable/nav_header"
            android:contentDescription="@string/nav_header_image" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/profile_image"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/colorWhite"
            android:layout_below="@+id/nav_header"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-130dp"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop"/>

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nav_header"
            android:background="@color/colorRed"
            android:elevation="4dp"
            android:paddingBottom="24dp">

            <ImageView
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:src="@drawable/ic_border_color_white_18dp"
                android:focusable="true"
                android:contentDescription="@string/edit_button" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:text="@string/name_txt"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/profile_layout"
            android:background="@color/colorWhite"
            android:elevation="4dp"
            android:padding="20dp"
            android:columnCount="2"
            android:rowCount="5">

            <TextView
                android:id="@+id/track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track_txt"
                android:textStyle="bold"
                android:layout_column="0"
                android:layout_row="0"/>

            <TextView
                android:id="@+id/track_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track_value"
                android:layout_column="1"
                android:layout_row="0"/>

            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_txt"
                android:textStyle="bold"
                android:layout_column="0"
                android:layout_row="1"/>

            <TextView
                android:id="@+id/country_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_value"
                android:layout_column="1"
                android:layout_row="1"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_txt"
                android:textStyle="bold"
                android:layout_column="0"
                android:layout_row="2"/>

            <TextView
                android:id="@+id/email_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_value"
                android:layout_column="1"
                android:layout_row="2"/>

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_txt"
                android:textStyle="bold"
                android:layout_column="0"
                android:layout_row="3"/>

            <TextView
                android:id="@+id/phone_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_value"
                android:layout_column="1"
                android:layout_row="3"/>

            <TextView
                android:id="@+id/slack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slack_txt"
                android:textStyle="bold"
                android:layout_column="0"
                android:layout_row="4"/>

            <TextView
                android:id="@+id/slack_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slack_value"
                android:layout_column="1"
                android:layout_row="4"/>

        </GridLayout>

    </RelativeLayout>

</ScrollView>