<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_alc_4_0"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textSize="26sp" />

    <Button
        android:id="@+id/about_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        android:text="@string/about_alc"
        android:onClick="showAbout"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimaryDark"
        android:layout_gravity="center_horizontal"
        android:text="@string/my_profile"/>

</LinearLayout>